# universal-agent-memory

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  PRODUCTION_ASSESSMENT.md  README.md  README.zh-CN.md  README.zh-TW.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v0.5.2.md  RELEASE_NOTES_v0.6.0.md  RELEASE_NOTES_v0.7.0.md  SECURITY.md  docker-compose.neo4j.yml  docker-compose.redis.yml  docker-compose.yml  docker_entrypoint.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
benchmarks/: stress_test.py
docs/: API.md  ARCHITECTURE.md  CASCADE_FORGET.md  CONFIG_REFERENCE.md  DEPLOYMENT.md  DEPLOYMENT.zh-CN.md  HALF_LIFE_TUNING.md  LONG_TERM_LLM.md  PR1-2-LLM-Compression.md  REDIS_STORE.md  STRESS_TEST.md  Token-Compression-Suite.md  VAULT_MIGRATION.md
docs/superpowers/plans/: 2026-07-10-cross-layer-forget-cascade.md  2026-07-17-audit-pass-resolution.md
docs/superpowers/specs/: 2026-07-10-cross-layer-forget-cascade-design.md
examples/: _prompt_compression_measure.py  _token_compression_demo.py  customer_service.py  game_npc.py  multi_agent.py  personal_assistant.py  research_agent.py
src/uams/: __init__.py  async_system.py  benchmarks.py  cli.py  config.py  errors.py  extract.py  health.py  system.py
src/uams/adapters/: __init__.py  base.py
src/uams/bus/: __init__.py  event_bus.py
src/uams/cache/: __init__.py  redis_backend.py
src/uams/core/: __init__.py  enums.py  models.py
src/uams/embedding/: __init__.py  base.py  client.py
src/uams/llm/: __init__.py  client.py
src/uams/multi_agent/: __init__.py  coordinator.py
src/uams/pipeline/: __init__.py  cascade.py  compression.py  forgetting.py  hierarchical_filter.py  llm_compression.py  privacy.py  query_rewrite.py  retrieval.py
src/uams/storage/: __init__.py  base.py  chromadb.py  memory.py  neo4j.py  postgresql.py  redis.py  sqlite.py
src/uams/utils/: backup.py  cascade_audit.py  embedding_serde.py  logging.py  retry.py  security.py  tokens.py
tests/: test_achat_retry.py  test_aplus.py  test_async_forget_signature.py  test_auto_extract.py  test_backup_failure_semantics.py  test_cascade.py  test_cascade_find_tier.py  test_category_half_life.py  test_chaos.py  test_chromadb_list_all.py  test_chromadb_store.py  test_cli.py  test_config_validation.py  test_consolidate_result.py  test_coordinator_auto_disable.py  test_decay_sweep_lock.py  test_embedding.py  test_embedding_serde.py  test_errors.py  test_hierarchical_filter.py  test_inmemory_cosine.py  test_llm_achat.py  test_llm_compression.py  test_llm_compression_pii.py  test_namespace_tenant.py  test_neo4j_store.py  test_neo4j_store_real.py  test_observe_required_fields.py  test_ollama_auto_detect.py  test_ollama_validator.py  test_postgresql_jsonb.py  test_postgresql_store.py  test_privacy_public_level.py  test_query_rewrite.py  test_redis_cache.py  test_redis_store.py  test_redis_store_real.py  test_remember_dedup.py  test_retrieval.py  test_retrieval_score_zero.py  (+11 more)
