[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "universal-agent-memory"
version = "0.5.2"
description = "A domain-agnostic persistent memory layer for any AI agent."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "liwt2010", email = "liwt06@126.com"}
]

maintainers = [
    {name = "liwt2010", email = "liwt06@126.com"}
]
keywords = [
    "ai", "agent", "memory", "llm", "rag", "persistent-memory",
    "multi-agent", "vector-store", "knowledge-graph", "memory-system",
    "ai-memory", "agent-memory", "long-term-memory"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/liwt2010/universal-agent-memory"
Repository = "https://github.com/liwt2010/universal-agent-memory"
Issues = "https://github.com/liwt2010/universal-agent-memory/issues"
Changelog = "https://github.com/liwt2010/universal-agent-memory/blob/main/CHANGELOG.md"
Documentation = "https://github.com/liwt2010/universal-agent-memory/blob/main/docs/API.md"

[project.optional-dependencies]
redis = ["redis>=5.0.0"]
neo4j = ["neo4j>=5.0.0"]
postgresql = ["psycopg2-binary>=2.9.0"]
chromadb = ["chromadb>=0.4.0"]
embeddings = ["tiktoken>=0.7.0", "sentence-transformers>=2.0.0"]
llm = ["openai>=1.0"]
all = [
    "redis>=5.0.0",
    "neo4j>=5.0.0",
    "psycopg2-binary>=2.9.0",
    "chromadb>=0.4.0",
    "tiktoken>=0.7.0",
    "sentence-transformers>=2.0.0",
    "openai>=1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "coverage>=7.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "flake8>=7.0.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"uams" = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
# Strict mypy flags are intentionally NOT enabled. P2-4 (PEP 585/604)
# migrated the type-alias syntax; stricter mode (no_implicit_optional,
# disallow_untyped_defs, etc.) was probed but generates ~155 / 252
# errors respectively from the v0.1-v0.3-era untyped defs and
# implicit-Optional default values. Enabling those gates here would
# block the v0.5.2 release on a cleanup that is explicitly out of
# scope. The 'mypy src/' step in CI already has no '|| true' (since
# commit e8e43b5) so new type regressions WILL still fail the build;
# we are just keeping the strict flags off until the untyped-returns
# follow-up PR lands.
ignore_missing_imports = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
